--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,17 +1,21 @@
-name: GitHub Actions Demo
-on: [push]
-jobs:
-  Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+name: HTML5 Validator
+  # You may pin to the exact commit or the version.
+  # uses: Cyb3r-Jak3/html5validator-action@bd8ee22d3b06b9c9b424e6c03abfbc57a022c374
+  uses: Cyb3r-Jak3/html5validator-action@v7.1.0
+  with:
+    # Path of the files to test
+    root: # optional
+    # Path of config file
+    config: # optional
+    # Extra arguments to test with
+    extra: # optional
+    # Format for logging output. Valid values: gnu, xml, json, text
+    format: # optional
+    # Logging Level. Valid values: DEBUG, INFO, WARNING. Default: WARNING
+    log_level: # optional, default is WARNING
+    # Checks css as well
+    css: # optional
+    # Files or directories to ignore in checking
+    blacklist: # optional
+    # Skip checking that code has been checked out
+    skip_git_check: # optional
