--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,23 +1,43 @@
-name: HTML5 Validator
+name: GitHub Actions Demo
 on: [push]
 jobs:
-  # You may pin to the exact commit or the version.
-  # uses: Cyb3r-Jak3/html5validator-action@bd8ee22d3b06b9c9b424e6c03abfbc57a022c374
-  uses: Cyb3r-Jak3/html5validator-action@v7.1.0
-  with:
-    # Path of the files to test
-    root: # optional
-    # Path of config file
-    config: # optional
-    # Extra arguments to test with
-    extra: # optional
-    # Format for logging output. Valid values: gnu, xml, json, text
-    format: # optional
-    # Logging Level. Valid values: DEBUG, INFO, WARNING. Default: WARNING
-    log_level: # optional, default is WARNING
-    # Checks css as well
-    css: # optional
-    # Files or directories to ignore in checking
-    blacklist: # optional
-    # Skip checking that code has been checked out
-    skip_git_check: # optional
+  Explore-GitHub-Actions:
+    - name: Proof HTML
+      # You may pin to the exact commit or the version.
+      # uses: anishathalye/proof-html@a1fab73421b3264d43811820f1cb701f52e1aaaf
+      uses: anishathalye/proof-html@v1.4.0
+      with:
+      # The directory to scan
+      directory: '/'
+    # Check whether external anchors exist
+      check_external_hash: # optional
+    # Validate HTML
+      check_html: # optional
+    # Enforce that images use HTTPS
+      check_img_http: # optional
+    # Check images and URLs in Open Graph metadata
+      check_opengraph: # optional
+    # Check whether favicons are valid
+      check_favicon: # optional
+    # Allow images with empty alt tags
+      empty_alt_ignore: # optional
+    # Require that links use HTTPS
+      enforce_https: # optional
+    # Only check external links
+      external_only: # optional
+    # Newline-separated list of domains to treat as internal URLs
+      internal_domains: # optional
+    # JSON-encoded map of domains to authorization tokens
+      tokens: # optional
+    # Maximum number of concurrent requests
+      max_concurrency: # optional
+    # HTTP connection timeout
+      connect_timeout: # optional
+    # HTTP request timeout
+      timeout: # optional
+    # Newline-separated list of URLs to ignore
+    url_ignore: # optional
+    # Newline-separated list of URL regexes to ignore
+    url_ignore_re: # optional
+    # Number of times to retry checking links
+    retries: # optional
